--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "projecttwelve",
+  "name": "mesto_with_mongodb",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "start": "node app.js ",
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "fs-readfile-promise": "^3.0.1",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
