--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
     "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
   },
-  "description": ""
+  "description": "Stack : Node.js; MongoDB; Express.js"
 }
