--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "mesto_with_mongodb",
+  "name": "mesto_with_authentication",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "start": "node app.js ",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "production": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
+    "mongoose-unique-validator": "^2.0.3",
     "validator": "^13.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "bcrypt": "^4.0.1",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
